# src/routes/product.seller.route.ts
@@ -1,5 +1,6 @@
 import asyncHandler from 'express-async-handler';
 import { Router } from 'express';
+import Joi from 'joi';
 import validate from '../middlewares/validation.middleware';
 import { productValidations } from '../validations';
 import { productController } from '../controllers';
@@ -20,12 +21,47 @@ sellerProductRouter.post(
   asyncHandler(productController.createProductVariant),
 );
 
-sellerProductRouter.get('/', asyncHandler(productController.getProducts));
-sellerProductRouter.get('/:productId', asyncHandler(productController.getProduct));
+sellerProductRouter.get('/', asyncHandler(productController.getSellerProducts));
+sellerProductRouter.get(
+  '/:productId',
+  validate(productValidations.getProduct),
+  asyncHandler(productController.getProduct),
+);
 
 sellerProductRouter.get(
   '/:productId/variants/options',
+  validate(productValidations.productGet),
   asyncHandler(productController.getProductVariationOptions),
+);
+
+sellerProductRouter.get(
+  '/:productId/variants/:variantId',
+  validate(productValidations.variantGet),
+  asyncHandler(productController.getProductVariant),
+);
+
+sellerProductRouter.delete(
+  '/:productId',
+  validate(productValidations.productGet),
+  asyncHandler(productController.deleteProduct),
+);
+
+sellerProductRouter.delete(
+  '/:productId/variants/:variantId',
+  validate(productValidations.variantGet),
+  asyncHandler(productController.deleteProductVariant),
+);
+
+sellerProductRouter.put(
+  '/:productId',
+  validate(productValidations.updateProduct),
+  asyncHandler(productController.updateProduct),
+);
+
+sellerProductRouter.put(
+  '/:productId/variants/:variantId',
+  validate(productValidations.updateProductVariant),
+  asyncHandler(productController.updateProductVariant),
 );
 
 export default sellerProductRouter;
